--- a/src/components/Box/Box.module.css
+++ b/src/components/Box/Box.module.css
@@ -1,8 +1,8 @@
 .box {
   display: flex;
+  flex-direction: column;
   width: 450px;
   background-color: #e9ecef;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
