status dots colors changed

--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -24,11 +24,11 @@
 }
 
 .green {
-  background-color: #208b3a;
+  background-color: #68d89b;
 }
 
 .red {
-  background-color: #e01e37;
+  background-color: #ff2c55;
 }
 
 .avatar {
